state drive (SSD) is recommended for those working on massive data files, as it 
greatly increased performance.

RELEASE NOTES:

Version 3.3.1 (June 2016)
- Fixed bug that falsely reported the use of 32-bit Java on 64-bit computers.
- Fixed bug that removed line feeds when copying code snippets from help 
  documentation into the Scripter.

Version 3.3.0 (May 2016)
-Altered the 'Update Script From Code Repository' function to retrieve updates 
 from the new GitHub Whitebox repo rather than Google Code.
-Added the Quantiles tool, which transforms a raster into quantiles. Quantiles 
 are values taken at regular intervals from the inverse of the cumulative 
 distribution function (CDF) of a random variable.
-Fixed a bug in the LAS2Shapefile tool that did not allow for the output dbf file
 to be written.
-Added the Convert LAS to MultiPointZ Shapefile tool. This allows for a more
 efficient means of storing LiDAR data as a Shapefile. All LiDAR points are 
 stored in a single record in the Shapefile, with Z and intensity data stored
 in the 'z' and 'm' components of the shapefile respectively.
-Added the Unnest Basins tool to extract the entire, unnested watersheds from 
 a series of pour points and a DEM.
-Added the Stream Slope (continuous) tool, which calculates the slope of stream
 grid cells in a raster stream network.
-Added the Rasterize Streams tool.
-Added the Prune Vector Stream Network tool.
-Added the experimental Impoundment Index tool for applications involving the
 mapping of drained wetlands from LiDAR and other fine-resolution DEMs.
-Added the Roughness From Point Cloud Profiles (RPCP) tool.
-Added the Split Vector Lines tool.
-Added the Integral Image tool.
-Added discrete Sibson interpolation tools (i.e. natural neighbour) for both 
 LiDAR specific data and for point data contained in Shapefiles.
-Added the De-noise DEM tool.
-Added the Reinitialize Attribute Table tool.
-Added the Standard Deviation of Elevation tool.