@@ -24,6 +24,8 @@ Version 3.3.1 (June 2016)
 - Fixed bug that falsely reported the use of 32-bit Java on 64-bit computers.
 - Fixed bug that removed line feeds when copying code snippets from help 
   documentation into the Scripter.
+- Updated the RetrieveSRTMDEMData tool to optionally fix ocean elevation values
+  by replacing them with nodata.
 
 Version 3.3.0 (May 2016)
 -Altered the 'Update Script From Code Repository' function to retrieve updates 
